syntax = "proto3";
package renumerate;

import "gogoproto/gogo.proto";

message TransactionRequest {
  option (gogoproto.goproto_getters) = false;

  string from_id = 1;
  string asset_id = 2;
}