syntax = "proto3";

package persistence_sdk.modules.metas.internal.queries.meta;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/metas/internal/queries/meta";

service Query {
  rpc Meta(QueryRequest) returns (QueryResponse) {
    option (google.api.http).get = "/persistenceSDK/metas/meta";
  };
}

message QueryRequest {
  string meta_i_d = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field MetaID missing"'];
}

message QueryResponse {
  bool success = 1;
  string error = 2 [(gogoproto.moretags) = 'swaggertype:"string"'];
  repeated string list = 3 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/helpers.Mappable"];
}